<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <include
        android:id="@+id/image_with_caption_and_content"
        layout="@layout/image_with_caption_and_content" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/course_gap_with_border"
        android:layout_marginRight="@dimen/course_gap_with_border"
        android:src="#CCCCCC" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F4F4F4"
        android:orientation="vertical"
        android:paddingBottom="25dp"
        android:paddingLeft="23dp"
        android:paddingRight="23dp"
        android:paddingTop="18dp" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:gravity="center"
                android:text="@string/course_deadline_text"
                android:textColor="#898989"
                android:textSize="15sp" >
            </TextView>

            <TextView
                android:id="@+id/course_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:gravity="center"
                android:text="2014/08/03 ~ 2014/08/20"
                android:textColor="#898989"
                android:textSize="15sp" >
            </TextView>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:gravity="center"
                android:text="@string/course_teacher_text"
                android:textColor="#898989"
                android:textSize="15sp" >
            </TextView>

            <TextView
                android:id="@+id/course_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:gravity="center"
                android:text="Sandy Lin"
                android:textColor="#898989"
                android:textSize="15sp" >
            </TextView>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:gravity="center"
                android:text="@string/course_cost_text"
                android:textColor="#898989"
                android:textSize="15sp" >
            </TextView>

            <TextView
                android:id="@+id/course_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:gravity="center"
                android:text="$ 14800"
                android:textColor="#898989"
                android:textSize="15sp" >
            </TextView>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:gravity="center"
                android:text="@string/course_location_text"
                android:textColor="#898989"
                android:textSize="15sp" >
            </TextView>

            <TextView
                android:id="@+id/course_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:gravity="center"
                android:text="台北市敦化南路一段160巷43號"
                android:textColor="#898989"
                android:textSize="15sp" >
            </TextView>
        </FrameLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="18dp"
            android:src="#CCCCCC" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:gravity="center"
                android:text="@string/course_consultation_text"
                android:textColor="#898989"
                android:textSize="15sp" >
            </TextView>

            <TextView
                android:id="@+id/course_consultation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:gravity="center"
                android:text="Amy"
                android:textColor="#898989"
                android:textSize="15sp" >
            </TextView>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:gravity="center"
                android:text="@string/course_email_text"
                android:textColor="#898989"
                android:textSize="15sp" >
            </TextView>

            <TextView
                android:id="@+id/course_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:gravity="center"
                android:text="abcdefg@gmail.com"
                android:textColor="#898989"
                android:textSize="15sp" >
            </TextView>
        </FrameLayout>

        <Button
            android:id="@+id/course_consultation_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="#17C9B4"
            android:gravity="center"
            android:text="@string/course_consultation_text"
            android:textColor="@android:color/white"
            android:textSize="18sp" >
        </Button>

        <Button
            android:id="@+id/course_email_consultation_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="#17C9B4"
            android:gravity="center"
            android:text="@string/course_email_consultation_text"
            android:textColor="@android:color/white"
            android:textSize="18sp" >
        </Button>
    </LinearLayout>

</LinearLayout>