<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <include
        android:id="@+id/image_with_caption_and_content"
        layout="@layout/image_with_caption_and_content" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="@dimen/promotion_gap_with_border"
        android:layout_marginRight="@dimen/promotion_gap_with_border"
        android:src="#CCCCCC" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="@dimen/promotion_gap_with_border"
        android:layout_marginRight="@dimen/promotion_gap_with_border" >

        <TextView
            android:id="@+id/promotion_trade_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:gravity="center"
            android:text="H-Park hair salon"
            android:textColor="#828282"
            android:textSize="20sp" >
        </TextView>

        <TextView
            android:id="@+id/promotion_retrieve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:gravity="center"
            android:text="@string/promotion_retrieve_text"
            android:textColor="#17C9B4"
            android:textSize="16sp" >
        </TextView>
    </FrameLayout>

    <TextView
        android:id="@+id/promotion_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="@dimen/promotion_gap_with_border"
        android:layout_marginRight="@dimen/promotion_gap_with_border"
        android:gravity="center"
        android:text="敦化南路一段160巷44號-3"
        android:textColor="#828282"
        android:textSize="16sp" >
    </TextView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="@dimen/promotion_gap_with_border"
        android:layout_marginRight="@dimen/promotion_gap_with_border" >

        <TextView
            android:id="@+id/promotion_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:gravity="center"
            android:text="02-12345678"
            android:textColor="#828282" >
        </TextView>

        <TextView
            android:id="@+id/promotion_business_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:gravity="center"
            android:text="10:00 ~ 20:00"
            android:textColor="#828282" >
        </TextView>
    </FrameLayout>

    <TextView
        android:id="@+id/promotion_retrieve_map"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="@dimen/promotion_button_gap_with_border"
        android:layout_marginRight="@dimen/promotion_button_gap_with_border"
        android:background="#17C9B4"
        android:gravity="center"
        android:text="@string/promotion_retrieve_map_text"
        android:textColor="@android:color/white"
        android:textSize="18sp" >
    </TextView>

    <TextView
        android:id="@+id/promotion_call"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="@dimen/promotion_button_gap_with_border"
        android:layout_marginRight="@dimen/promotion_button_gap_with_border"
        android:background="#17C9B4"
        android:gravity="center"
        android:text="@string/promotion_call_text"
        android:textColor="@android:color/white"
        android:textSize="18sp" >
    </TextView>

</LinearLayout>